# openapi.json
@@ -129,7 +129,7 @@
           },
           "from": {
             "type": "string",
-            "description": "Sender email address"
+            "description": "Sender email address. If omitted, resolved from key-service (provider: postmark-from-address)."
           },
           "to": {
             "type": "string",
@@ -198,7 +198,6 @@
           }
         },
         "required": [
-          "from",
           "to",
           "subject"
         ]
@@ -342,7 +341,6 @@
                 }
               },
               "required": [
-                "from",
                 "to",
                 "subject"
               ]
